# android_virtualTouch

./: CMakeLists.txt  Q&A.md  README.MD  README.md  updateLog.md
include/tools/: tools.h
src/: main.cpp
src/tools/: tools.cpp
